--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,9 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .header {
@@ -44,10 +45,122 @@ body {
   column-gap: 30px;
   font-weight: 500;
   align-items: center;
+  white-space: nowrap;
 }
 .btn {
   border: 1px solid #f53855;
   border-radius: 50px;
   padding: 13px 45px;
   color: #f53855 !important;
+}
+
+/* HOVER EFFECT */
+@media (hover: hover) {
+  .navlink:hover {
+    transition: 0.2s;
+    text-decoration: underline;
+  }
+  .btn:hover {
+    transition: background ease 0.2s;
+    background: #f53855;
+    color: white !important;
+  }
+}
+
+/* ADAPTABILITY */
+@media (max-width: 1065px) {
+  .navbar {
+    display: none;
+  }
+
+  .navbar.active {
+    display: inline-flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: hsla(0, 0%, 0%, 0.712);
+    backdrop-filter: blur(3px);
+    height: 100vh;
+    width: 50vw;
+    flex-direction: column;
+    row-gap: 30px;
+    padding: 40px;
+    padding-top: 50px;
+  }
+
+  .navbar.active .navlink {
+    color: white;
+  }
+
+  .header-wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 26px;
+  }
+
+  .hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    z-index: 500;
+  }
+
+  .hamburger-icon div {
+    height: 2px;
+    width: 100%;
+    background-color: black;
+    transition: all ease 0.2s;
+  }
+
+  .active .top {
+    transform: rotate(-45deg);
+  }
+
+  .active .middle {
+    display: none;
+  }
+
+  .active .bottom {
+    transform: rotate(45deg);
+    margin-top: -24px;
+  }
+
+  .hamburger-icon.active div {
+    background-color: white;
+  }
+}
+
+@media (max-width: 580px) {
+  .logo {
+    font-size: 17px;
+    column-gap: 5px;
+  }
+  .logotype {
+    scale: 1.3;
+  }
+  .header-login {
+    font-size: 14px;
+    column-gap: 14px;
+  }
+  .header-wrapper {
+    column-gap: 12px;
+  }
+  .header-wrapper .btn {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 389px) {
+  .logo p {
+    display: none;
+  }
+  .logotype {
+    scale: 1.5;
+  }
+  .navbar.active {
+    width: 65vw;
+  }
 }
