--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@ body {
   font-family: 'Rubik', sans-serif;
   height: 100vh;
   width: 100vw;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-content: center;
-  overflow-x: hidden;
 }
 
 .container {
@@ -22,12 +22,18 @@ body {
 /* HEADER */
 
 .header {
-  margin-top: 46px;
+  padding-top: 46px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+  max-width: 1400px;
 
+  position: fixed;
+  width: 100%;
+  padding-right: -100%;
+}
+/* overflow-x: hidden; */
 .logo {
   display: flex;
   align-items: center;
@@ -56,6 +62,7 @@ body {
   font-weight: 500;
   align-items: center;
   white-space: nowrap;
+  margin-right: 50px;
 }
 .btn {
   border: 1px solid #f53855;
@@ -158,6 +165,7 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 100px 0;
+  padding-top: 190px;
 }
 .hero-info {
   max-width: 550px;
@@ -230,6 +238,9 @@ p span {
 
 /* ADAPTABILITY */
 @media (max-width: 1065px) {
+  .header {
+    max-width: 95%;
+  }
   .navbar {
     display: none;
   }
@@ -299,6 +310,7 @@ p span {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 80px 20px;
+    padding-top: 130px;
   }
   .hero-info {
     row-gap: 15px;
@@ -325,6 +337,9 @@ p span {
     max-width: 550px;
     row-gap: 10px;
   }
+  .header-login {
+    margin-right: 0px;
+  }
 }
 
 @media (max-width: 892px) {
@@ -334,6 +349,9 @@ p span {
   }
   .man-first {
     margin: 0 auto;
+  }
+  .header {
+    max-width: 94%;
   }
 }
 
@@ -362,6 +380,9 @@ p span {
     width: 280px;
     margin: 0 auto;
   }
+  .header {
+    max-width: 93%;
+  }
 }
 
 @media (max-width: 389px) {
@@ -378,6 +399,9 @@ p span {
     width: 200px;
     margin: 0 auto;
     margin-top: 20px;
+  }
+  .hero-section {
+    padding-top: 110px;
   }
 }
 
